Add more builtin function to the interpreter. Add CLI switch to enable them.
other small changes. Use correct name for FeX language document

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
 project(fex C)
 
-set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD 90)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
 
-add_executable(fex src/fex.c src/fex_span.c src/fe.c src/main.c)
+add_executable(fex src/fex.c src/fex_span.c src/fe.c src/main.c src/fex_builtins.c src/sfc32.c)
+
+# Link math library on Unix systems, not needed on Windows
+if(UNIX)
+    target_link_libraries(fex m)
+endif()
